2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* prj2make-sharp-lib.csproj: Don't make local copies of
	  project references.

2009-07-03  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* prj2make-sharp-lib.csproj: Added MonoDevelop.Refactoring
	  reference. (otherwise build would break)

2009-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MsPrjHelper.cs: Track assembly lookup APIs.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* VS2003ProjectFileFormat.cs: Use the new FilePath class for
	  handling file and directory paths.

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* prj2make-sharp-lib.csproj:
	* prj2make-sharp-lib.addin.xml:
	* MSBuildProjectServiceExtension.cs:
	* SilverlightMSBuildProjectExtension.cs: Remove unused code
	  and extensions.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* prj2make-sharp-lib.csproj: don't require specific
	gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* prj2make-sharp-lib.addin.xml: Bump MD version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MsPrjHelper.cs: Add support for multiple target runtimes.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* prj2make-sharp-lib.csproj: Don't local-copy project refs.

2009-03-13  Mike Krüger  <mkrueger@novell.com>

	* prj2make-sharp-lib.csproj: Moved text editor to core

2009-03-10  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* prj2make-sharp-lib.csproj: Monodevelop changed the reference
	  a bit.

2009-03-10  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* prj2make-sharp-lib.csproj: Updated nrefactory references.

2009-02-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MsPrjHelper.cs: Track api changes.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* prj2make-sharp-lib.csproj: Exorcise more unwanted local
	  copy.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* prj2make-sharp-lib.mdp: